force-app/main/default/objects/BatchExecutionKpiConfiguration__mdt/BatchExecutionKpiConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>BatchExecutionKpiConfiguration</label>
    <pluralLabel>BatchExecutionKpiConfiguration</pluralLabel>
</CustomObject>