force-app/main/default/objects/BatchExecutionKpiConfiguration__mdt/fields/DesiredEmail__c.field-meta.xml
<CustomField>
    <fullName>DesiredEmail__c</fullName>
    <label>Desired email</label>
    <type>Email</type>
</CustomField>