force-app/main/default/objects/BatchExecutionKpiConfiguration__mdt/fields/EnableEmailSend__c.field-meta.xml
<CustomField>
    <fullName>EnableEmailSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable email send</label>
    <type>Checkbox</type>
</CustomField>