force-app/main/default/objects/BatchExecutionKpiConfiguration__mdt/fields/EnableTracking__c.field-meta.xml
<CustomField>
    <fullName>EnableTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable tracking</label>
    <type>Checkbox</type>
</CustomField>